--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,8 @@
     </div>
   </header>
 
-  <section class="search" style="background-image: url(images/search-bg.jpg);">    
+
+  <section class="search" style="background-image: url(images/search-bg.jpg);">
     <div class="container">
       <div class="search__inner">
         <div class="search__inner-title">
@@ -92,6 +93,238 @@
       </div>
     </div>
   </section>
+
+
+  <section class="products">
+    <div class="container-fluid">
+      <div class="products__title title">
+        Let’s Check Out Our Newest Release Prodcuts
+      </div>
+      <div class="products__inner">
+        <div class="products__inner-btn">
+          <button type="button" data-filter="all">All</button>
+          <button type="button" data-filter=".category-wordpress">WordPress</button>
+          <button type="button" data-filter=".category-joomla">Joomla</button>
+          <button type="button" data-filter=".category-plugins">Plugins</button>
+          <button type="button" data-filter=".category-component">Component</button>
+          <button type="button" data-filter=".category-psd">PSD</button>
+        </div>
+        <div class="products__inner-box">
+          <div class="products__item mix category-component category-new" data-order="1">
+            <a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+            <div class="products__item-content">
+              <div class="products__item-name">
+                <a class="products__item-title" href="#">
+                  Responsive Mobile APP
+                </a>
+                <a class="products__item-category" href="#">
+                  Site Template
+                </a>
+              </div>
+              <div class="products__item-price">
+                $19
+              </div>
+            </div>
+            <div class="products__item-info">
+              <a class="products__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+                <span>Radiustheme</span>
+              </a>
+              <div class="products__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+          <div class="products__item mix category-wordpress category-plugins" data-order="2">
+            <a class="products__item-img" href="#" style="background-image: url(images/content/product-item-2.jpg);"></a>
+            <div class="products__item-content">
+              <div class="products__item-name">
+                <a class="products__item-title" href="#">
+                  The Post Grid Pro
+                </a>
+                <a class="products__item-category" href="#">
+                  WordPress Plugin
+                </a>
+              </div>
+              <div class="products__item-price">
+                $15
+              </div>
+            </div>
+            <div class="products__item-info">
+              <a class="products__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+                <span>PsdBosS</span>
+              </a>
+              <div class="products__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+          <div class="products__item mix  category-wordpress" data-order="3">
+            <a class="products__item-img" href="#" style="background-image: url(images/content/product-item-3.jpg);"></a>
+            <div class="products__item-content">
+              <div class="products__item-name">
+                <a class="products__item-title" href="#">
+                  Food Menu
+                </a>
+                <a class="products__item-category" href="#">
+                  WordPress Plugin
+                </a>
+              </div>
+              <div class="products__item-price">
+                $20
+              </div>
+            </div>
+            <div class="products__item-info">
+              <a class="products__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+                <span>Manilip</span>
+              </a>
+              <div class="products__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+          <div class="products__item mix  category-popular category-psd" data-order="4">
+            <a class="products__item-img" href="#" style="background-image: url(images/content/product-item-4.jpg);"></a>
+            <div class="products__item-content">
+              <div class="products__item-name">
+                <a class="products__item-title" href="#">
+                  Imac Mockup
+                </a>
+                <a class="products__item-category" href="#">
+                  Psd Template
+                </a>
+              </div>
+              <div class="products__item-price">
+                $12
+              </div>
+            </div>
+            <div class="products__item-info">
+              <a class="products__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+                <span>Lolypop</span>
+              </a>
+              <div class="products__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+          <div class="products__item mix category-joomla category-new " data-order="5">
+            <a class="products__item-img" href="#" style="background-image: url(images/content/product-item-5.jpg);"></a>
+            <div class="products__item-content">
+              <div class="products__item-name">
+                <a class="products__item-title" href="#">
+                  Gymedge
+                </a>
+                <a class="products__item-category" href="#">
+                  Joomla Template
+                </a>
+              </div>
+              <div class="products__item-price">
+                $45
+              </div>
+            </div>
+            <div class="products__item-info">
+              <a class="products__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+                <span>Micrsof</span>
+              </a>
+              <div class="products__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+          <div class="products__item mix category-wordpress category-plugins" data-order="6">
+            <a class="products__item-img" href="#" style="background-image: url(images/content/product-item-6.jpg);"></a>
+            <div class="products__item-content">
+              <div class="products__item-name">
+                <a class="products__item-title" href="#">
+                  The Post Grid Pro
+                </a>
+                <a class="products__item-category" href="#">
+                  WordPress Plugin
+                </a>
+              </div>
+              <div class="products__item-price">
+                $19
+              </div>
+            </div>
+            <div class="products__item-info">
+              <a class="products__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+                <span>Raklouse</span>
+              </a>
+              <div class="products__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+          <div class="products__item mix category-component category-new" data-order="7">
+            <a class="products__item-img" href="#" style="background-image: url(images/content/product-item-7.jpg);"></a>
+            <div class="products__item-content">
+              <div class="products__item-name">
+                <a class="products__item-title" href="#">
+                  Doll Face
+                </a>
+                <a class="products__item-category" href="#">
+                  Illsatration
+                </a>
+              </div>
+              <div class="products__item-price">
+                $10
+              </div>
+            </div>
+            <div class="products__item-info">
+              <a class="products__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+                <span>Mikc Art</span>
+              </a>
+              <div class="products__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+          <div class="products__item mix  category-popular category-psd" data-order="8">
+            <a class="products__item-img" href="#" style="background-image: url(images/content/product-item-8.jpg);"></a>
+            <div class="products__item-content">
+              <div class="products__item-name">
+                <a class="products__item-title" href="#">
+                  Designer Mockup
+                </a>
+                <a class="products__item-category" href="#">
+                  PsdTemplate
+                </a>
+              </div>
+              <div class="products__item-price">
+                $10
+              </div>
+            </div>
+            <div class="products__item-info">
+              <a class="products__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+                <span>ThemeLol</span>
+              </a>
+              <div class="products__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="products__bottom-btn">
+        <button type="button" data-filter=".category-new">All New Items</button>
+        <button type="button" data-filter=".category-popular">Popular Items</button>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
