--- a/app/index.html
+++ b/app/index.html
@@ -131,7 +131,7 @@
                 <span>Radiustheme</span>
               </a>
               <div class="products__item-star">
-                (05)
+                <div class="rate-star"></div>(<span>05</span>) 
               </div>
             </div>
           </div>
@@ -156,7 +156,7 @@
                 <span>PsdBosS</span>
               </a>
               <div class="products__item-star">
-                (05)
+                <div class="rate-star"></div>(<span>05</span>) 
               </div>
             </div>
           </div>
@@ -181,7 +181,7 @@
                 <span>Manilip</span>
               </a>
               <div class="products__item-star">
-                (05)
+                <div class="rate-star"></div>(<span>05</span>) 
               </div>
             </div>
           </div>
@@ -206,7 +206,7 @@
                 <span>Lolypop</span>
               </a>
               <div class="products__item-star">
-                (05)
+                <div class="rate-star"></div>(<span>05</span>) 
               </div>
             </div>
           </div>
@@ -231,7 +231,7 @@
                 <span>Micrsof</span>
               </a>
               <div class="products__item-star">
-                (05)
+                <div class="rate-star"></div>(<span>05</span>) 
               </div>
             </div>
           </div>
@@ -256,7 +256,7 @@
                 <span>Raklouse</span>
               </a>
               <div class="products__item-star">
-                (05)
+                <div class="rate-star"></div>(<span>05</span>) 
               </div>
             </div>
           </div>
@@ -281,7 +281,7 @@
                 <span>Mikc Art</span>
               </a>
               <div class="products__item-star">
-                (05)
+                <div class="rate-star"></div>(<span>05</span>) 
               </div>
             </div>
           </div>
@@ -306,7 +306,7 @@
                 <span>ThemeLol</span>
               </a>
               <div class="products__item-star">
-                (05)
+                <div class="rate-star"></div>(<span>05</span>) 
               </div>
             </div>
           </div>
@@ -315,6 +315,419 @@
       <div class="products__bottom-btn">
         <button type="button" data-filter=".category-new">All New Items</button>
         <button type="button" data-filter=".category-popular">Popular Items</button>
+      </div>
+    </div>
+  </section>
+
+  
+  <section class="product-slider">
+    <div class="container-fluid">
+      <div class="product-slider__title title">
+        This Week Trending Products
+      </div>
+      <div class="product-slider__inner">
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-1.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                Responsive Template
+              </a>
+              <a class="products__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="products__item-price">
+              $19
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>Radiustheme</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-2.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                The Post Grid Pro
+              </a>
+              <a class="products__item-category" href="#">
+                WordPress Plugin
+              </a>
+            </div>
+            <div class="products__item-price">
+              $15
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>PsdBosS</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-3.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                Logo Showcae
+              </a>
+              <a class="products__item-category" href="#">
+                Joomla Cmponent
+              </a>
+            </div>
+            <div class="products__item-price">
+              $20
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>Manilip</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-4.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                UI Design
+              </a>
+              <a class="products__item-category" href="#">
+                Psd Template
+              </a>
+            </div>
+            <div class="products__item-price">
+              $12
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>Lolypop</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-1.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                Responsive Template
+              </a>
+              <a class="products__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="products__item-price">
+              $19
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>Radiustheme</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-2.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                The Post Grid Pro
+              </a>
+              <a class="products__item-category" href="#">
+                WordPress Plugin
+              </a>
+            </div>
+            <div class="products__item-price">
+              $15
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>PsdBosS</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-3.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                Logo Showcae
+              </a>
+              <a class="products__item-category" href="#">
+                Joomla Cmponent
+              </a>
+            </div>
+            <div class="products__item-price">
+              $20
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>Manilip</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-4.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                UI Design
+              </a>
+              <a class="products__item-category" href="#">
+                Psd Template
+              </a>
+            </div>
+            <div class="products__item-price">
+              $12
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>Lolypop</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-1.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                Responsive Template
+              </a>
+              <a class="products__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="products__item-price">
+              $19
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>Radiustheme</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-2.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                The Post Grid Pro
+              </a>
+              <a class="products__item-category" href="#">
+                WordPress Plugin
+              </a>
+            </div>
+            <div class="products__item-price">
+              $15
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>PsdBosS</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-3.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                Logo Showcae
+              </a>
+              <a class="products__item-category" href="#">
+                Joomla Cmponent
+              </a>
+            </div>
+            <div class="products__item-price">
+              $20
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>Manilip</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-4.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                UI Design
+              </a>
+              <a class="products__item-category" href="#">
+                Psd Template
+              </a>
+            </div>
+            <div class="products__item-price">
+              $12
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>Lolypop</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-1.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                Responsive Template
+              </a>
+              <a class="products__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="products__item-price">
+              $19
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>Radiustheme</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-2.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                The Post Grid Pro
+              </a>
+              <a class="products__item-category" href="#">
+                WordPress Plugin
+              </a>
+            </div>
+            <div class="products__item-price">
+              $15
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>PsdBosS</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-3.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                Logo Showcae
+              </a>
+              <a class="products__item-category" href="#">
+                Joomla Cmponent
+              </a>
+            </div>
+            <div class="products__item-price">
+              $20
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>Manilip</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+        <div class="products__item">
+          <a class="products__item-img" href="#" style="background-image: url(images/slider/slider-4.jpg);"></a>
+          <div class="products__item-content">
+            <div class="products__item-name">
+              <a class="products__item-title" href="#">
+                UI Design
+              </a>
+              <a class="products__item-category" href="#">
+                Psd Template
+              </a>
+            </div>
+            <div class="products__item-price">
+              $12
+            </div>
+          </div>
+          <div class="products__item-info">
+            <a class="products__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>               
+              <span>Lolypop</span>
+            </a>
+            <div class="products__item-star">
+              <div class="rate-star"></div>(<span>05</span>) 
+            </div>
+          </div>
+        </div>
+
+
       </div>
     </div>
   </section>
@@ -333,3 +746,4 @@
 </body>
 
 </html>
+
