--- a/app/index.html
+++ b/app/index.html
@@ -727,7 +727,50 @@
           </div>
         </div>
 
+      </div>
+    </div>
+  </section>
 
+
+  <section class="advantages">
+    <div class="container">
+      <div class="advantages__title title">
+        Why You Choose Foxtar Market Place?
+      </div>
+      <div class="advantages__inner">
+        <div class="advantages__item">
+          <div class="advantages__item-images icosvg-1">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
+          </div>
+          <div class="advantages__item-title">
+            Easily Buy & Sell 
+          </div>
+          <div class="advantages__item-text">
+            Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+          </div>
+        </div>
+        <div class="advantages__item">
+          <div class="advantages__item-images icosvg-2">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-gift"><polyline points="20 12 20 22 4 22 4 12"></polyline><rect x="2" y="7" width="20" height="5"></rect><line x1="12" y1="22" x2="12" y2="7"></line><path d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"></path><path d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"></path></svg>
+          </div>
+          <div class="advantages__item-title">
+            Quality Products 
+          </div>
+          <div class="advantages__item-text">
+            Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+          </div>
+        </div>
+        <div class="advantages__item">
+          <div class="advantages__item-images icosvg-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>
+          </div>
+          <div class="advantages__item-title">
+            100% Secure Payment
+          </div>
+          <div class="advantages__item-text">
+            Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+          </div>
+        </div>
       </div>
     </div>
   </section>
