--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,10 @@
               +61 3 8376 6284</a>
           </div>
           <div class="header__box">
-            <a class="basket" href="#"></a>
+            <a class="notification header__circle" href="#"></a>
+            <a class="message header__circle" href="#"></a>
+            <a class="basket header__circle" href="#"></a>
+            <a class="user" href="#"></a>
             <a class="header__btn header__btn-login" href="#">Login</a>
             <a class="header__btn header__btn-register" href="#">Register</a>
           </div>
