--- a/app/index.html
+++ b/app/index.html
@@ -26,12 +26,136 @@
               +61 3 8376 6284</a>
           </div>
           <div class="header__box">
-            <a class="notification header__circle" href="#"></a>
-            <a class="message header__circle" href="#"></a>
-            <a class="basket header__circle" href="#"></a>
-            <a class="user" href="#"></a>
-            <a class="header__btn header__btn-login" href="#">Login</a>
-            <a class="header__btn header__btn-register" href="#">Register</a>
+            <!-- КРУЖКИ НА ХЕДЕРЕ -->
+            <!-- NOTIFICATION -->
+            <div class="notification__box">
+              <a class="notification header__circle active icon-bell-o" href="#">
+                <span>8</span>
+              </a>
+              <div class="circle__menu notification__menu">
+                <a href="#" class="circle__item icon-bell-o icons-color">
+                  <img class="circle__images" src="images/content/message-1.jpg" alt="">
+                  <div class="circle__info">
+                    <div class="circle__info-thema">Need WP Help!</div>
+                    <div class="circle__info-data">01 Dec, 2016</div>
+                  </div>
+                </a>
+                <a href="#" class="circle__item icon-bell-o">
+                  <img class="circle__images" src="images/content/message-2.jpg" alt="">
+                  <div class="circle__info">
+                    <div class="circle__info-thema">Need WP Help!</div>
+                    <div class="circle__info-data">26 Nov, 2016</div>
+                  </div>
+                </a>
+                <a href="#" class="circle__item icon-bell-o">
+                  <img class="circle__images" src="images/content/message-3.jpg" alt="">
+                  <div class="circle__info">
+                    <div class="circle__info-thema">Need WP Help!</div>
+                    <div class="circle__info-data">26 Nov, 2016</div>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- MESSAGE -->
+            <div class="message__box">
+              <a class="message header__circle active icon-envelope-o" href="#">
+                <span>5</span>
+              </a>
+              <div class="circle__menu message__menu">
+                <a href="#" class="circle__item icon-envelope-o icons-color">
+                  <img class="circle__images" src="images/content/message-1.jpg" alt="">
+                  <div class="circle__info">
+                    <div class="circle__info-name">Kazi Fahim</div>
+                    <div class="circle__info-thema">Need WP Help!</div>
+                    <div class="circle__info-data">01 Dec, 2016</div>
+                  </div>
+                </a>
+                <a href="#" class="circle__item icon-envelope-o">
+                  <img class="circle__images" src="images/content/message-2.jpg" alt="">
+                  <div class="circle__info">
+                    <div class="circle__info-name">Richi Lenal</div>
+                    <div class="circle__info-thema">Need WP Help!</div>
+                    <div class="circle__info-data">26 Nov, 2016</div>
+                  </div>
+                </a>
+                <a href="#" class="circle__item icon-mail-reply">
+                  <img class="circle__images" src="images/content/message-3.jpg" alt="">
+                  <div class="circle__info">
+                    <div class="circle__info-name">Apple Device</div>
+                    <div class="circle__info-thema">Psd Template Help!</div>
+                    <div class="circle__info-data">26 Nov, 2016</div>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- КОРЗИНА -->
+            <div class="basket__box">
+              <a class="basket header__circle  active icon-shopping-cart" href="#">
+                <span>8</span>
+              </a>
+              <div class="circle__menu">
+                <div class="circle__item">
+                  <img class="circle__images" src="images/content/basket-1.png" alt="">
+                  <div class="circle__info">
+                    <div class="circle__info-name">Grand Ballet </div>
+                    <div class="circle__info-thema">WordPress</div>
+                    <div class="circle__info-price">$59</div>
+                  </div>
+                </div>
+                <div class="circle__item">
+                  <img class="circle__images" src="images/content/basket-2.png" alt="">
+                  <div class="circle__info">
+                    <div class="circle__info-name">Apple Device</div>
+                    <div class="circle__info-thema">WordPress</div>
+                    <div class="circle__info-price">$59</div>
+                  </div>
+                </div>
+                <div class="basket__summ">
+                  <div class="basket__title">
+                    <div class="basket__sum-total">Total</div>
+                    <div class="basket__sum-price">$118</div>
+                  </div>
+                  <a class="basket__btn" href="#">Go to Cart</a>
+                  <a class="basket__btn basket__btn-checkout" href="#">Go to Checkout</a>
+                </div>
+              </div>
+            </div>
+            <!-- ЧУВАК ЗАРЕГИСТРИРОВАН -->
+            <div class="user__box">
+              <a class="user" href="#">
+                <div class="user__inner">
+                  <div class="user__images">
+                    <img src="images/content/user-login.jpg" alt="">
+                  </div>
+                  <div class="user__info">
+                    <div class="user__name">
+                      Mike Hussy
+                    </div>
+                    <div class="user__money">
+                      $171.00
+                    </div>
+                  </div>
+                </div>
+              </a>
+              <!-- МЕНЮ ПРИ ХОВЕРЕ -->
+
+              <div class="user__menu">
+                <ul>
+                  <li><a class="angle-right" href="#">Profile Page</a></li>
+                  <li><a class="angle-right" href="#">Portfolio</a></li>
+                  <li><a class="angle-right" href="#">Account Setting</a></li>
+                  <li><a class="angle-right" href="#">Downloads</a></li>
+                  <li><a class="angle-right" href="#">Wishlist</a></li>
+                  <li><a class="angle-right" href="#">Upload Item</a></li>
+                  <li><a class="angle-right" href="#">Statement</a></li>
+                  <li><a class="angle-right" href="#">Withdraws</a></li>
+                </ul>
+              </div>
+            </div>
+            <!-- КНОПКИ -->
+            <a class="header__btn header__btn-login header__btn-login--off" href="#">Login</a>
+            <a class="header__btn header__btn-logout header__btn-login--on" href="#">Logout</a>
+            <a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
           </div>
         </div>
       </div>
@@ -875,13 +999,13 @@
             <div class="footer__col-title">
               Join Our Community
             </div>
-              <ul class="footer__col-list">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Forums</a></li>
-                <li><a href="#">Become an Author</a></li>
-                <li><a href="#">Community Meetups</a></li>
-                <li><a href="#"> Become an Affiliate</a></li>
-              </ul>
+            <ul class="footer__col-list">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Forums</a></li>
+              <li><a href="#">Become an Author</a></li>
+              <li><a href="#">Community Meetups</a></li>
+              <li><a href="#"> Become an Affiliate</a></li>
+            </ul>
           </div>
           <div class="footer__col footer__col-menu">
             <div class="footer__col-title">
