--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <title>moderno</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -153,9 +154,10 @@
               </div>
             </div>
             <!-- КНОПКИ -->
-            <a class="header__btn header__btn-login header__btn-login--off" href="#">Login</a>
-            <a class="header__btn header__btn-logout header__btn-login--on" href="#">Logout</a>
-            <a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
+            <a class="header__btn header__btn-login header__btn-login--off" data-fancybox data-src="#trueModal" href="javascript:;">Login
+              </data-fancybox>
+              <a class="header__btn header__btn-logout header__btn-login--on" href="#">Logout</a>
+              <a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
           </div>
         </div>
       </div>
@@ -1053,11 +1055,29 @@
   </footer>
 
 
-
+  <div id="trueModal">
+    <div class="login__wrapper">
+      <div class="login__title">
+        Login
+      </div>
+      <form>
+        <label class="login__label-name">
+          <input type="text" placeholder="Name" required>
+        </label>
+        <label class="login__label-pass">
+          <input type="text" placeholder="Password" required>
+        </label>
+        <button type="submit">Submit</button>
+        <a class="create-acc" href="#">Creat An Account?</a>
+        <a class="lost-pass" href="#">Lost Password?</a>
+      </form>
+    </div>
+  </div>
 
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
   <script src="js/main.min.js"></script>
   <script src="js/main.js"></script>
 </body>
