--- a/app/new-items.html
+++ b/app/new-items.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Newi-tems</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/libs.min.css">
+    <title>new-items</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -234,14 +232,6 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs__list">
                             <li><a href="#">Home</a></li>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Home</a></li>
                             <li><span>Product Page</span></li>
                         </ul>
                     </div>
@@ -279,7 +269,7 @@
                                 <div class="aside__product-item">
                                     <div class="product__item">
                                         <a class="product__item-img" href="#"
-                                            style="background-image: url(images/content/product-item.jpg);"></a>
+                                            style="background-image: url(images/product-details/product-item-img-1.jpg);"></a>
                                         <div class="product__item-content">
                                             <div class="product__item-name">
                                                 <a class="product__item-title" href="#">
@@ -860,9 +850,15 @@
             </div>
         </footer>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+
+
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.min.js"></script>
-    <script src="js/main.js"></script>
+    <scrip src="js/main.js"></scrip>
 </body>
 
 </html>
