--- a/app/contact.html
+++ b/app/contact.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
+    <title>contacts</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -232,28 +231,67 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs__list">
                             <li><a href="#">Home</a></li>
-                            <li><span>404 Page</span></li>
+                            <li><span>Contact Us</span></li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-            <div class="page-404">
+            <div class="contact">
                 <div class="container">
-                    <div class="page-404__wrapper">
-                        <div class="page-404__head">
-                            Error Page
+                    <div class="contact__wrapper">
+                        <div class="contact__head">
+                            Contact With Us
                         </div>
-                        <div class="page-404__inner">
-                            <div class="page-404__404">404</div>
-                            <div class="page-404__title">Sorry Page Was Not Found</div>
-                            <div class="page-404__text">
-                                The page you are looking is not available or has been removed.
-                                Try going to Home Page by using the button below.
+                        <div class="contact__inner">
+                            <div class="contact__map">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12086.277851486497!2d-73.97745054371678!3d40.771493193120264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2588fc50eabc7%3A0x145ef5ddf63a434e!2zODEg0YHRgtGA0LjRgiAtINCc0YPQt9C10YPQvCDQvtGEINCd0Y3Rh9GD0YDQsNC7INCl0LjRgdGC0L7RgNC4!5e0!3m2!1sru!2sua!4v1619045305810!5m2!1sru!2sua"
+                                    style="border:0;" allowfullscreen=""
+                                    loading="lazy"></iframe>
                             </div>
-                            <a class="page-404__link" href="#">
-                                Go To Home Page
-                            </a>
+                            <div class="contact__box">
+                                <div class="contact__info">
+                                    <div class="contact__info-item">
+                                        <div class="contact__info-title icon-map-marker">
+                                            Our Office Address
+                                        </div>
+                                        <div class="contact__info-content">
+                                            PO Box 16122 Collins Street West
+                                            Victoria 8007 Australia
+                                        </div>
+                                    </div>
+                                    <div class="contact__info-item">
+                                        <div class="contact__info-title icon-phone">
+                                            Phone
+                                        </div>
+                                        <a class="contact__info-content" href="tel:61383766284">
+                                            +61 3 8376 6284
+                                        </a>
+                                    </div>
+                                    <div class="contact__info-item">
+                                        <div class="contact__info-title icon-envelope-o">
+                                            E-mail
+                                        </div>
+                                        <div class="contact__info-content">
+                                            info@foxtar.com
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="contact__form">
+                                    <div class="contact__form-title">
+                                        Drop Us A Message
+                                    </div>
+                                    <form>
+                                        <div class="contact__form-row">
+                                            <input type="text" placeholder="Name*" required>
+                                            <input type="text" placeholder="E-mail*" required>
+                                        </div>
+                                        <textarea placeholder="Message*" required></textarea>
+                                        <button type="submit">Send Message</button>
+                                    </form>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
