--- a/app/settings.html
+++ b/app/settings.html
@@ -237,7 +237,7 @@
                 </div>
             </div>
 
-            <div class="settings">
+            <section class="settings">
                 <div class="container">
                     <div class="settings__inner">
                         <div class="product-one__tabs settings__tabs">
@@ -503,7 +503,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
 
 
         </div>
