added adaptive upload, profile, settings, contact pages

--- a/app/upload.html
+++ b/app/upload.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>page</title>
+    <title>upload</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
@@ -232,9 +232,7 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs__list">
                             <li><a href="#">Home</a></li>
-                            <li><span>
-                                    <p>Upload Product</p>
-                                </span></li>
+                            <li><span>Upload Product</span></li>
                         </ul>
                     </div>
                 </div>
