--- a/app/withdrawals.html
+++ b/app/withdrawals.html
@@ -232,7 +232,7 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs__list">
                             <li><a href="#">Home</a></li>
-                            <li><span><p>Withdrawals</p></span></li>
+                            <li><span>Withdrawals</span></li>
                         </ul>
                     </div>
                 </div>
