--- a/app/profile.html
+++ b/app/profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>page</title>
+    <title>profile</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
@@ -233,7 +233,7 @@
                         <ul class="breadcrumbs__list">
                             <li><a href="#">Home</a></li>
                             <li><span>
-                                    <p>Product Page</p>
+                                    Product Page
                                 </span></li>
                         </ul>
                     </div>
